--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ description              : &description "I am currently a masters student at Bos
 applications. I am currently looking for an advisor to give me a good direction"
 url                      : https://saurav717.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "saurav717/saurav717.github.io"
+repository               : "academicpages/academicpages.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
