--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ analytics:
 author:
   name             : "Saurav vara prasad Chennuri"
   avatar           : "profile.png"
-  bio              : "Working to reason with vision"
+  bio              : "Grad Research Assistant"
   location         : "Boston, MA"
   employer         :
   googlescholar    : "https://scholar.google.com/citations?user=5WyCoaoAAAAJ&hl=en&oi=sra"
