--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 # Site Author
 author:
   name             : "Saurav vara prasad Chennuri"
-  avatar           : "profile.png"
+  avatar           : "profile2.png"
   bio              : #"Grad Research Assistant"
   location         : "Boston, MA"
   employer         :
