--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ analytics:
 author:
   name             : "Saurav vara prasad Chennuri"
   avatar           : "profile2.png"
-  bio              : #"Grad Research Assistant"
+  bio              : "Grad RA, Boston University"
   location         : "Boston, MA"
   employer         :
   googlescholar    : "https://scholar.google.com/citations?user=5WyCoaoAAAAJ&hl=en&oi=sra"
