--- a/_config.yml
+++ b/_config.yml
@@ -233,17 +233,17 @@ defaults:
       type: portfolio
     values:
       layout: single
-      author_profile: true
-      share: true
-      comment: true
+      author_profile: False
+      share: False
+      comment: False
   # _talks
   - scope:
       path: ""
       type: talks
     values:
       layout: talk
-      author_profile: true
-      share: true
+      author_profile: False
+      share: False
 
 # Sass/SCSS
 sass:
