--- a/_config.yml
+++ b/_config.yml
@@ -228,22 +228,22 @@ defaults:
       share: true
       comments: true
   # _portfolio
-  # - scope:
-  #     path: ""
-  #     type: portfolio
-  #   values:
-  #     layout: single
-  #     author_profile: False
-  #     share: False
-  #     comment: False
+  - scope:
+      path: ""
+      type: portfolio
+    values:
+      layout: single
+      author_profile: False
+      share: False
+      comment: False
   # _talks
-  # - scope:
-  #     path: ""
-  #     type: talks
-  #   values:
-  #     layout: talk
-  #     author_profile: False
-  #     share: False
+  - scope:
+      path: ""
+      type: talks
+    values:
+      layout: talk
+      author_profile: False
+      share: False
 
 # Sass/SCSS
 sass:
