--- a/_config.yml
+++ b/_config.yml
@@ -233,8 +233,8 @@ defaults:
       type: portfolio
     values:
       layout: single
-      author_profile: False
-      share: False
+      author_profile: True
+      share: True
       comment: False
   # _talks
   - scope:
@@ -242,7 +242,7 @@ defaults:
       type: talks
     values:
       layout: talk
-      author_profile: False
+      author_profile: True
       share: False
 
 # Sass/SCSS
